--- a/new-site/index.html
+++ b/new-site/index.html
@@ -9,5 +9,9 @@
 <p>Some Text</p>
 <p>Some Text</p>
 <p>Some Text</p>
+<p>Some Text</p>
+<p>Some Text</p>
+<p>Some Text</p>
+<p>Some Text</p>
 </body>
 </html>
